2006-12-10  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Updated for 2.18.

2006-11-28  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: bug-buddy has branched for
	gnome-2-16

2006-11-17  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: the slab module was renamed to
	gnome-main-menu

2006-11-17  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: nautilus, eel and gnome-vfs
	have branched for gnome-2-16

2006-11-21  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: fixed potname for pitivi and evolution-jescs

2006-11-17  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: libbonobo has branched for
	gnome-2-16

2006-11-17  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: gconf-editor has branched for
	gnome-2-16

2006-11-16  Priit Laes  <plaes@cvs.gnome.org>

	* translation-status.xml: Moved ekiga to alphabetically correct place.

2006-11-16  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Changed seahorse branch to HEAD.

2006-11-10  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Added gimp-python module.

2006-11-08  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: gthumb modified in a non-standard
	way. (trying to provide pot files for two different branches)

2006-11-07  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Gedit and gnome-keyring-manager branched
	for 2.16

2006-11-07  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Updated branch for
	gnome-{desktop,panel,session} for gnome-2.16

2006-11-01  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status: Updated branch for gnome-menus 2.16 to gnome-2-16

2006-10-31  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: Updated branches for libgnome,