@@ -1,5 +1,9 @@
 2006-12-10  Danilo Šegan  <danilo@gnome.org>
 
+	* new-release.py: Fix to update branch tags as well.
+
+2006-12-10  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-status.xml: Updated for 2.18.
 
 2006-11-28  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
